added postreq to task topic on wage range

--- a/tasks/t_determining_correct_wage_range.dita
+++ b/tasks/t_determining_correct_wage_range.dita
@@ -20,5 +20,6 @@
         </step>
       </steps>
       <result>once you have filled out the required fields, a range of wage should appear corresponding to the data you inputed</result>
+      <postreq>this wage range is required to determine the correct wage level for the labor condition application</postreq>
   </taskbody>
 </task>
