Grammatical changes and adding better contextual words

--- a/concepts/c_standard_wage_ranges.dita
+++ b/concepts/c_standard_wage_ranges.dita
@@ -6,12 +6,12 @@
   <conbody>
     <section>
       <title>what standard wage ranges are used for</title>
-      <p>a standard wage range enables a sponsoring company to know what the prevailing or justified range of wages is owed to their sponsored employee. this wage range will make it possible to determine what specific wage level is required later in a labor condition application based off of the workers skills and qualifications. a standard wage range is also one of the first pieces of data that is needed to complete a labor condition application. </p>
+      <p>a standard wage range enables a sponsoring company to know what the prevailing or justified range of wages is owed to their sponsored employee. this wage range will make it possible to determine what specific wage level is required later in a labor condition application based off of the workers skills and qualifications.</p>
     </section>
     <section>
       <title>how standard wage ranges are aquired</title>
       <p>
-        standard wage ranges are aquired through using the flag.dol.gov website. this website enables a user to find wage data for forign workers coming to the us on employment-based visas.
+        standard wage ranges are aquired through using the flag.dol.gov website. this website enables a user to find wage data for foreign workers coming to the us on employment-based visas.
       </p>
       <p>
         the flag.dol.gov website can give a accurate range of wages based off a combination of factors that you input into the search function within the wage data section of the website. factors such as:
@@ -26,9 +26,9 @@
     <section>
       <title>how o*net can find the correct job title</title>
       <p>
-        o*net (the occupational information network), is source website sponsored by the department of labor to allow people to search for wage data.
+        o*net (the occupational information network), is a source website sponsored by the department of labor to allow people to search for wage data.
       </p>
-      <p>a foreign workers job title will need to be placed in one of the many predetermined o*net job titles based on how well their foreign job description matches with one of the o*net job descriptions
+      <p>a foreign workers job title will need to be translated into one of the many predetermined o*net job titles based on how well their foreign job description matches with one of the o*net job descriptions.
       </p>
       <p>
         o*net uses a variety of factors to determine which predetermined job title could match a foreign workers job title including:
