Changes for clarity

--- a/concepts/c_wage_levels.dita
+++ b/concepts/c_wage_levels.dita
@@ -7,7 +7,7 @@
     <section>
       <title>calculative methods for finding wage levels</title>
       <p>
-        finding a specific wage level within a wage range requires a semi-calculative method. often law firms use their own custom methods to meet this requirment
+        finding a specific wage level within a wage range requires a calculative method. often law firms use their own custom methods to meet this requirment
       </p>
       <p>methods include:</p>
       <ul>
@@ -17,7 +17,7 @@
     </section>
     <section>
       <title>information that the calculative methods use</title>
-      <p>wether a law firm uses the department of labor or their own calculative method, the same information will be used to determine the wage level, such as: 
+      <p>whether a law firm uses the department of labor or their own calculative method, the same information will be used to determine the wage level, such as: 
         <dl>
           <dlentry>
             <dt>svp range</dt>
