--- a/references/r_types_of_petitions_that_need_lca.dita
+++ b/references/r_types_of_petitions_that_need_lca.dita
@@ -29,7 +29,7 @@
               <row>
                 <entry>e-3</entry>
                 <entry>australia</entry>
-                <entry>specialized occupation</entry>
+                <entry>specialized</entry>
               </row>
             </tbody>
           </tgroup>
