--- a/concepts/c_what_is_USCIS_cover_letter.dita
+++ b/concepts/c_what_is_USCIS_cover_letter.dita
@@ -4,6 +4,7 @@
   <title>What is a USCIS Cover Letter?</title>
   <conbody>
     <p>A USCIS Cover Letter is a formal document that accompanies a petition to the US Citizenship and Immigration Services Office</p>
-    <p>This document helps the USCIS officer navigate the petition</p>
+    <p>This document helps the USCIS officer navigate the petitionby helping them look at the specific education documents/certifications of the client</p>
+    <p>The cover letter also lets the USCIS officer to know where to expect copies of original documents like the clients passport or the offer letter for the job provided by the sponsoring company</p>
   </conbody>
 </concept>
