--- a/concepts/c_what_is_H-1B_petition.dita
+++ b/concepts/c_what_is_H-1B_petition.dita
@@ -3,6 +3,8 @@
 <concept id="c_what_is_H-1B_petition">
   <title>What is a H-1B Petition?</title>
   <conbody>
-    <p>A H-1B is a type of visa that aims to enable foreign nationals who have specialized knowledge to enter the U.S. for a period of three years with the possibility of extending that time an additional three years for a total of six years within the U.S.</p>
+    <p>a H-1B is a temporary visa</p>
+    <p>it is a type of visa that aims to enable foreign nationals who have specialized knowledge to enter the U.S. for a period of three years with the possibility of extending that time an additional three years for a total of six years within the US</p>
+    <p>specialty occupations requires the application of a body of highly specialized knowledge and the attainment of at least a bachelor’s degree or its equivalent</p>
   </conbody>
 </concept>
