Added one audience indicator for c_the_labor_condition_application

--- a/concepts/c_the_labor_condition_application.dita
+++ b/concepts/c_the_labor_condition_application.dita
@@ -6,7 +6,7 @@
   <conbody>
     <section>
       <title>purpose of the labor condition application form</title>
-      <p>
+      <p audience="novice">
         the labor condiiton application form, form 9035 and form 9035e, is a used by the department of labor to ensure foreign workers are being paid the correct amount of wages based of off the geographical location and expertise required of the proposed job by the sponsoring company. it takes into account the expertise and education of the foreign worker to ensure they are being paid more for special skills or supervisory duties.
       </p>
       <p>
