--- a/ditamaps/_map_h-1b_petition_scenario_1.ditamap
+++ b/ditamaps/_map_h-1b_petition_scenario_1.ditamap
@@ -2,10 +2,7 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map id="m_h-1b_petition_creation_scenario_one">
   <title>h-1b petition creation scenario one</title>
-  <topicref type="concept" href="concepts\c_what_is_H-1B_petition.dita">
-    <topicref type="concept" href="concepts\c_contents_of_H-1B_petition.dita"/>
-    <topicref type="task" href="C:\W7-Task-Topics\Topic-Model-7\tasks\t_organizing_H-1B_petition.dita"/>
-    <topicref type="reference" href="references/r_required_h-1b_documents.dita"/>
-    <topicref type="reference" href="references\r_compiling_hb1_steps.dita"/>
-  </topicref>
+  <topicref type="concept" href="concepts\c_what_is_H-1B_petition.dita"/>
+  <topicref type="concept" href="concepts\c_contents_of_H-1B_petition.dita"/>
+  <topicref type="task" href="tasks\t_organizing_H-1B_petition.dita"/>
 </map>
