--- a/_map_h-1b_petition_scenario_1.ditamap
+++ b/_map_h-1b_petition_scenario_1.ditamap
@@ -4,8 +4,8 @@
   <title>h-1b petition creation scenario one</title>
   <topicref type="concept" href="concepts\c_what_is_H-1B_petition.dita"/>
    <topicref type="concept" href="concepts\c_contents_of_H-1B_petition.dita">
-      <topicref type="reference" href="references/r_compiling_hb1_steps.dita"/>
-      <topicref type="reference" href="references/r_required_h-1b_documents.dita"/>
+      <topicref type="reference" href="references\r_compiling_hb1_steps.dita"/>
+      <topicref type="reference" href="references\r_required_h-1b_documents.dita"/>
     </topicref>
   <topicref type="task" href="tasks\t_organizing_H-1B_petition.dita"/>
 </map>
