--- a/tasks/t_determining_correct_wage_range.dita
+++ b/tasks/t_determining_correct_wage_range.dita
@@ -19,9 +19,16 @@
           <cmd>navigate to oflc wage search within the wage data tab</cmd>
         </step>
         <step>
+          <!-- Some spelling errors to note in this step. -->
+          <!-- I revised this step with some perhaps better element semantic options. Take this suggestion and also apply elsewhere, when applicable throughout the model. -->
+          <note type="tip">
+            As you fill out the form, if you do not know the o*net occupation code for the given job description, you can use the o*net occupation code search bar located on the same page to find it
+          </note>
           <cmd>fill out fields within this page with the job descritption information you have for the company sponsoring the foreign worker</cmd>
-          <info>if you do not know the o*net occupation code for the given job description, you can use the o*net occupation code search bar located on the same page to find it</info>
-          <stepxmp>implementing the parameters, <i>data science</i> will result in the query result of multiple careers dealing with data science with more specific job descriptions and their corresponding o*net code</stepxmp>
+          <!-- <info>if you do not know the o*net occupation code for the given job description, you can use the o*net occupation code search bar located on the same page to find it</info> -->
+          <!-- more appropriate tag perhaps? -->
+          <stepresult>implementing the parameters, <i>data science</i> will result in the query result of multiple careers dealing with data science with more specific job descriptions and their corresponding o*net code</stepresult>
+          <!-- <stepxmp>implementing the parameters, <i>data science</i> will result in the query result of multiple careers dealing with data science with more specific job descriptions and their corresponding o*net code</stepxmp> -->
         </step>
       </steps>
       <result>once you have filled out the required fields, a range of wages should appear corresponding to the data you inputed</result>
