PL Edits and adding markdown report

--- a/concepts/c_the_labor_condition_application.dita
+++ b/concepts/c_the_labor_condition_application.dita
@@ -10,7 +10,7 @@
         the labor condiiton application form, form 9035 and form 9035e, is a used by the department of labor to ensure foreign workers are being paid the correct amount of wages based of off the geographical location and expertise required of the proposed job by the sponsoring company. it takes into account the expertise and education of the foreign worker to ensure they are being paid more for special skills or supervisory duties.
       </p>
       <p>
-        it demonstrates that the proposed job by the sponsoring company could not be filled by any us applicants and therefore, the company needed to look internationally to fill the position.
+        demonstrates the job could not be filled by any us applicants and the company needed to hire internationally
       </p>
       <p>
         once the department of labor approves the labor condition application form, the company can then start the process of filing the complete foreign workers petition.
