--- a/concepts/c_what_is_H-1B_petition.dita
+++ b/concepts/c_what_is_H-1B_petition.dita
@@ -5,6 +5,6 @@
   <conbody>
     <p>a H-1B is a temporary visa</p>
     <p>it is a type of visa that aims to enable foreign nationals who have specialized knowledge to enter the U.S. for a period of three years with the possibility of extending that time an additional three years for a total of six years within the US</p>
-    <p>specialty occupations requires the application of a body of highly specialized knowledge and the attainment of at least a bachelor’s degree or its equivalent</p>
+    <p>attaining at a bachelors degree or equivalent and having highly specialized knowledge is required</p>
   </conbody>
 </concept>
